--- a/Confirmation.form
+++ b/Confirmation.form
@@ -2,6 +2,7 @@
 
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
+    <Property name="title" type="java.lang.String" value="&#xca;tes-vous s&#xfb;r ?"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -66,7 +67,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="&#xca;tes vous sur de votre action ?"/>
+        <Property name="text" type="java.lang.String" value="Voulez-vous vraiment quitter ?"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="Message.setText(text);"/>
